--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
 var locations=[];
 locations=[
   {
-    "lat":23.35,
-    "lng":85
+    "lat":23.35003932,
+    "lng": 85.30807963
   },
   {
-    "lat":23.35551,
-    "lng":85.11111
+    "lat":23.35003932,
+    "lng": 85.30807963
   }
   ];
+        
+   
       </script>
     <script>
     
